Remove fixed header nav – too much confusion

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,7 +4,6 @@
 @import "bootstrap/variables";
 
 body {
-  margin-top: 4.375em;
   position: relative;
 }
 
